--- a/src/CombatAnalysis.App/Views/Chat/PersonalChatMessagesVew.xaml
+++ b/src/CombatAnalysis.App/Views/Chat/PersonalChatMessagesVew.xaml
@@ -47,7 +47,17 @@
         </Grid>
 
         <TextBlock Name="myAccountId" Text="{Binding MyAccount.Id}" Visibility="Hidden"/>
-        <ListBox Name="personalChat" Grid.Row="1" HorizontalContentAlignment="Stretch" ItemsSource="{Binding Messages}" Background="Transparent">
+        <ListBox Grid.Row="1" HorizontalContentAlignment="Stretch" ItemsSource="{Binding Messages}" Background="Transparent">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Vertical" VerticalAlignment="Bottom"/>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <EventSetter Event="MouseEnter" Handler="ListBoxItemMouseEnter"/>
+                </Style>
+            </ListBox.ItemContainerStyle>
             <ListBox.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                     <GradientStop Color="#462ADB" Offset="0"/>
@@ -61,32 +71,32 @@
                     <Grid>
                         <StackPanel>
                             <StackPanel.Visibility>
-                                <MultiBinding Converter="{StaticResource MultiplyToVisibility}" ConverterParameter="true">
-                                    <Binding Path="AppUserId" />
-                                    <Binding ElementName="myAccountId" Path="Text" />
-                                </MultiBinding>
-                            </StackPanel.Visibility>
-
-                            <uc:UserChat Username="{Binding Path=Username}"/>
-                            <uc:MessageChat Color="#45B69C" Message="{Binding Path=Message}"/>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm}" Style="{StaticResource timeText}"/>
-                            </StackPanel>
-                        </StackPanel>
-
-                        <StackPanel>
-                            <StackPanel.Visibility>
                                 <MultiBinding Converter="{StaticResource MultiplyToVisibility}">
                                     <Binding Path="AppUserId" />
                                     <Binding ElementName="myAccountId" Path="Text" />
                                 </MultiBinding>
                             </StackPanel.Visibility>
 
-                            <uc:UserChat HorizontalAlignment="Right" Username="{Binding Path=Username}"/>
-                            <uc:MyMessageChat Color="#96CDFF" Message="{Binding Path=Message}"/>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <TextBlock Text="{Binding Path=Time, StringFormat=hh\\:mm}" Style="{StaticResource timeTextRight}"/>
+                            <uc:UserChat Username="{Binding Path=Username}"/>
+                            <StackPanel Orientation="Horizontal" Margin="5 0">
+                                <TextBlock Text="{Binding Path=Time, StringFormat={}{0:MM-dd HH\\:mm}}" Style="{StaticResource timeText}"/>
                             </StackPanel>
+                            <uc:MessageChat Color="#45B69C" Message="{Binding Path=Message}"/>
+                        </StackPanel>
+
+                        <StackPanel>
+                            <StackPanel.Visibility>
+                                <MultiBinding Converter="{StaticResource MultiplyToVisibility}" ConverterParameter="true">
+                                    <Binding Path="AppUserId" />
+                                    <Binding ElementName="myAccountId" Path="Text" />
+                                </MultiBinding>
+                            </StackPanel.Visibility>
+
+                            <uc:UserChat HorizontalAlignment="Right" Username="{Binding Path=Username}"/>
+                            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                                <TextBlock Text="{Binding Path=Time, StringFormat={}{0:MM-dd HH\\:mm}}" Style="{StaticResource timeTextRight}"/>
+                            </StackPanel>
+                            <uc:MyMessageChat Color="#96CDFF" Message="{Binding Path=Message}"/>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
