--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -114,6 +114,11 @@ $mobile-max-width: 425px;
         margin: $padding-large;
         font-size: 20px;
         text-align: center;
+
+        span {
+            color: aqua;
+            cursor: pointer;
+        }
     }
 
     &__my-chats {
@@ -207,6 +212,11 @@ $mobile-max-width: 425px;
                 opacity: 0.6;
                 text-align: center;
                 margin: 5px 0;
+
+                span {
+                    color: aqua;
+                    cursor: pointer;
+                }
             }
         }
 
