--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
@@ -32,7 +32,7 @@ $mobile-max-width: 425px;
 }
 
 .communication-short-menu {
-    left: 35vw;
+    left: 40vw;
 
     &__container {
         .main-menu {
@@ -41,7 +41,11 @@ $mobile-max-width: 425px;
     }
 }
 
-.communication-menu, .communication-short-menu {
+.communication-hide-menu {
+    left: 3vw;
+}
+
+.communication-menu, .communication-short-menu, .communication-hide-menu {
     position: fixed;
     display: flex;
     align-items: center;
@@ -55,7 +59,7 @@ $mobile-max-width: 425px;
         opacity: 1;
     }
 
-    &__title {
+    &__title, &__hide {
         display: flex;
         justify-content: center;
         padding: 5px;
@@ -63,12 +67,23 @@ $mobile-max-width: 425px;
         div {
             padding: 5px 10px;
             border-radius: 20px;
-            box-shadow: 2px 2px 2px 2px yellow;
             background: #0c192c;
 
             svg {
                 cursor: pointer;
             }
+        }
+    }
+
+    &__title {
+        div {
+            box-shadow: 2px 2px 2px 2px yellow;
+        }
+    }
+
+    &__hide {
+        div {
+            box-shadow: 2px 2px 2px 2px gray;
         }
     }
 
@@ -169,7 +184,7 @@ $mobile-max-width: 425px;
         height: 100%;
         width: 100%;
         bottom: 0;
-        opacity: 0.6;
+        opacity: 0.7;
         background: gray;
         border-radius: 25px;
         box-shadow: 3px 3px 3px 3px gray;
@@ -177,7 +192,6 @@ $mobile-max-width: 425px;
 
     .notify {
         position: absolute;
-        top: -15%;
         padding: 5px 20px;
         box-shadow: 2px 2px 2px 2px green;
         border: 2px solid green;
