--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
@@ -13,6 +13,7 @@ $mobile-max-width: 425px;
     top: 10vh;
     margin-bottom: 50px;
     font-size: 0.9em;
+    z-index: 2000;
 
     .chat-name-required, .chat-description-required, .community-name-required, .community-description-required {
         font-size: 0.9em;
